tests/errors/syn_method13.java
public class syn_method13 {
public static String[] main ( {
 
}
}